--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
     <head>
+        <title>AR.js Video Player</title>
         <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
@@ -8,19 +9,37 @@
         <script>
             AFRAME.registerComponent('videohandler', {
                 init: function () {
-                    var marker = this.el;
-                    this.vid = document.querySelector("#vid");
+                    const marker = this.el;
+                    const video = document.querySelector("#vid");
+                    let isPlaying = false;
 
-                    marker.addEventListener('markerFound', function () {
-                        this.toggle = true;
-                        this.vid.play();
-                    }.bind(this));
+                    marker.addEventListener('markerFound', () => {
+                        if (!isPlaying) {
+                            video.play();
+                            isPlaying = true;
+                            console.log("Marker found. Video playing.");
+                        }
+                    });
 
-                    marker.addEventListener('markerLost', function () {
-                        this.toggle = false;
-                        this.vid.pause();
-                    }.bind(this));
-                },
+                    marker.addEventListener('markerLost', () => {
+                        if (isPlaying) {
+                            video.pause();
+                            isPlaying = false;
+                            console.log("Marker lost. Video paused.");
+                        }
+                    });
+
+                    // Add a click handler to manually start/stop the video for better mobile compatibility
+                    this.el.sceneEl.addEventListener('click', () => {
+                        if (video.paused) {
+                            video.play();
+                            isPlaying = true;
+                        } else {
+                            video.pause();
+                            isPlaying = false;
+                        }
+                    });
+                }
             });
         </script>
     </head>
@@ -39,13 +58,11 @@
                     id="vid"
                     src="assets/asset.mp4"
                     preload="auto"
-                    response-type="arraybuffer"
                     loop
                     crossorigin
                     webkit-playsinline
-                    autoplay
-                    muted
                     playsinline
+                    muted
                 ></video>
             </a-assets>
 
